Opened 16 years ago
Closed 4 years ago
#2724 closed bug (fixed)
B_OUTLINE_RESIZE not implemented
Reported by: | julun | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (1)
Change History (15)
comment:1 by , 16 years ago
Component: | - General → Kits/Interface Kit |
---|
comment:2 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
by , 12 years ago
Attachment: | B_OUTLINE_RESIZE-1.patch added |
---|
follow-up: 4 comment:3 by , 12 years ago
Component: | Kits/Interface Kit → Servers/app_server |
---|---|
Version: | R1/pre-alpha1 → R1/Development |
Thanks, TriEdgeAl! The patch looks nicely, I could even only find two minor coding style violations. I haven't tested it, though (since siarzhuk wanted to look at it, too).
Have you by any chance written a test application for this? If so, src/tests/servers/app/
would be a natural place for it -- patch welcome!
comment:4 by , 12 years ago
Replying to axeld:
Have you by any chance written a test application for this? If so,
src/tests/servers/app/
would be a natural place for it -- patch welcome!
As far as I remember, our Magnify application is the one, using B_OUTLINE_RESIZE flag. I have just tested this patch with one of my applications before noticed about Magnify. But the special test application is welcome too! This patch utilizes "non-canonical" way of outline resize - it draws natural window border "teared" off the window. In my personal taste it looks a bit like a buggy behavior so I would like to see some polishing of it. But this is my personal meaning. Another issue - drawing of border on minimizing the frame is hidden under the views of this window - that is loking not nice IMO. As far as I know TriEdge AI wanted to continue working on this feature "in calm" after finishing GCI competition so we can hear from him some more news in the future. :-)
comment:5 by , 12 years ago
Thanks siarzhuk! I agree that tearing off the border isn't a nice visual effect; I didn't even get the idea that the patch would do that :-)
Still, I think it's the right way to let the decorator handle this case.
comment:6 by , 12 years ago
patch: | 0 → 1 |
---|
follow-up: 8 comment:7 by , 12 years ago
Is it worthwhile to apply this patch as-is and open new tickets for the tearing issues?
comment:8 by , 12 years ago
Replying to mmadia:
Is it worthwhile to apply this patch as-is and open new tickets for the tearing issues?
Tearing off is not a problem - the problem is that we have no right solution at all. ;-)
comment:9 by , 10 years ago
Owner: | changed from | to
---|
Those were taken some years ago as potential GCI tasks. Unfortunately no place is available for them in my schedule at this days.
comment:11 by , 7 years ago
patch: | 1 → 0 |
---|
comment:12 by , 4 years ago
Milestone: | R1 → R1.1 |
---|
comment:14 by , 4 years ago
Milestone: | R1.1 → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | assigned → closed |
This ticket was published as GCI 2012 task. http://google-melange.appspot.com/gci/task/view/google/gci2012/7984202 So I take ownership of it.