Implement B_OUTLINE_RESIZE

- Untested, because the build is currently broken
- According to the ticket (#2724), there are drawing artifacts
- Probably need some refactor after the introduction of TabDecorator