src/servers/app/Desktop.cpp
@@ -1524,7 +1524,7 @@ Desktop::ResizeWindowBy(Window* window, float x, float y)
 	// make sure the window cannot mark stuff dirty outside
 	// its visible region...
 	newDirtyRegion.IntersectWith(&window->VisibleRegion());
-	// ...because we do this outself
+	// ...because we do this ourselves
 	newDirtyRegion.Include(&previouslyOccupiedRegion);
 
 	MarkDirty(newDirtyRegion);
@@ -1538,6 +1538,25 @@ Desktop::ResizeWindowBy(Window* window, float x, float y)
 	}
 
 	NotifyWindowResized(window);
+}
+
+
+void
+Desktop::SetWindowOutlinesDelta(Window* window, BPoint delta)
+{
+	AutoWriteLocker _(fWindowLock);
+
+	if (!window->IsVisible())
+		return;
+
+	BRegion newDirtyRegion;
+	window->SetOutlinesDelta(delta, &newDirtyRegion);
+
+	BRegion background;
+	_RebuildClippingForAllWindows(background);
+
+	MarkDirty(newDirtyRegion);
+	_SetBackground(background);
 }
 
 
